Fix offset spacing

--- a/client/src/components/pages/Admin/AdminPortal.css
+++ b/client/src/components/pages/Admin/AdminPortal.css
@@ -69,7 +69,7 @@ h2 {
   padding: 20px;
   background-color:#bce6f8;
   /* background-color:rgb(217, 233, 238); */
-  margin: 0px -20px -20px -20px;
+  margin: 0px;
   border-radius: 0 0 5px 5px;
   min-height: 100vh;
 }
